feature: add day-02

--- a/index.html
+++ b/index.html
@@ -1,25 +1,51 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        Olá, eu sou a cabeça
-    </title>
+    <title>Andre Caetano CV</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1> h1 eu sou o corpo</h1>  
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-contents">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.jpg" alt="Profile Image">
+                    <p class="name">André Caetano</p>
+                    <p class="profession">Marketing</p>
+                </div>
+                <div class="contact-info>">
+                    <p class="left-title">Contanto</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 999999999</li>
+                        <li><i class="fa fa-envelope"></i>andre@gmail.com</li>
+                        <li><i class="fa fa-globe"></i>+www.andre.com</li>
+                        <li><i class="fa fa-github"></i>andre.github.io</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>Photoshop, Illustrator & Premiere</p></li>
+                        <li><p>Word & Excel</p></li>
+                    </ul>
+                </div>
+            </section> 
+        </section>      
+                <section class="right-section">
+                    <div class="right-section-contets">
+                        <section class="about gap">
+                            <div class="right-title">Sobre Mim</div>
+                            <p class="about=me-contents">
+                                Olá Sou André Caetano, e sou um publicitário<br>
+                                <br> Um pouco mais sobre o que faço
+                                <br> Quais são as minhas competecias
+                            </p>
+                        </section>
+                    </div>
+                </section>  
+            </section>         
+    </main>
 </body>
-<ol>
-    <li>cafe</li>
-    <li>cha</li>
-    <li>leite</li>
-    
-</ol>
-<ul>
-    <li>cafe</li>
-    <li>cha</li>
-    <li>leite</li>
-</ul>
 </html>
