Feature: add jobs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <p class="name">André Caetano</p>
                     <p class="profession">Marketing</p>
                 </div>
-                <div class="contact-info>">
+                <div class="contact-info">
                     <p class="left-title">Contanto</p>
                     <ul>
                         <li><i class="fa fa-phone"></i>+55 999999999</li>
@@ -32,8 +32,8 @@
                     </ul>
                 </div>
             </section> 
-        </section>      
-                <section class="right-section">
+            </section>      
+            <section class="right-section">
                     <div class="right-section-contets">
                         <section class="about gap">
                             <div class="right-title">Sobre Mim</div>
@@ -44,8 +44,31 @@
                             </p>
                         </section>
                     </div>
-                </section>  
-            </section>         
+            <section class="experience gap">
+                <div class="right title">Experiencia</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 01</p>
+                        <p class="exp-company-name">2021-Present1</p>
+                    </div>
+                    <div class="exp=right">
+                        <p class="exp-position">publicitário</p>
+                        <p class="exp-desc">
+                            Descreva as princiáos atividades da empresa 01
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 02</p>
+                        <p class="exp-company-name">2017-2020</p>
+                    </div>
+                    <div class="exp=right">
+                        <p class="exp-position">publicitário</p>
+                        <p class="exp-desc">
+                            Descreva as princiáos atividades da empresa 02
+                        </p>
+                    </div>
+                </div>
+            </section>       
     </main>
 </body>
 </html>
