--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,6 +7,7 @@
     <title>Andre Caetano CV</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <main class="resume-contents">
         <section class="left-section">
@@ -27,23 +29,27 @@
                 <div class="skills">
                     <p class="left-title">Skills</p>
                     <ul>
-                        <li><p>Photoshop, Illustrator & Premiere</p></li>
-                        <li><p>Word & Excel</p></li>
+                        <li>
+                            <p>Photoshop, Illustrator & Premiere</p>
+                        </li>
+                        <li>
+                            <p>Word & Excel</p>
+                        </li>
                     </ul>
                 </div>
-            </section> 
-            </section>      
-            <section class="right-section">
-                    <div class="right-section-contets">
-                        <section class="about gap">
-                            <div class="right-title">Sobre Mim</div>
-                            <p class="about=me-contents">
-                                Olá Sou André Caetano, e sou um publicitário<br>
-                                <br> Um pouco mais sobre o que faço
-                                <br> Quais são as minhas competecias
-                            </p>
-                        </section>
-                    </div>
+            </section>
+        </section>
+        <section class="right-section">
+            <div class="right-section-contets">
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about=me-contents">
+                        Olá Sou André Caetano, e sou um publicitário<br>
+                        <br> Um pouco mais sobre o que faço
+                        <br> Quais são as minhas competecias
+                    </p>
+                </section>
+            </div>
             <section class="experience gap">
                 <div class="right title">Experiencia</div>
                 <div class="experience-contents">
@@ -68,7 +74,34 @@
                         </p>
                     </div>
                 </div>
-            </section>       
+            </section>
+            <section class="education gap">
+                <div class="right-title">formação Academica</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">Mackenzie</p>
+                        <p class="education-time-period">2015-2018</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Publicidade e Propaganda</p>
+                        <p class="education-desc">
+                            Bacharelado
+                        </p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-school-name">CEFET</p>
+                        <p class="education-time-period">2009-2013</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Técnico em Edificações</p>
+                        <p class="education-desc">
+                            Técnico
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </section>
     </main>
 </body>
+
 </html>
