--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andre Caetano CV</title>
+    <!-- Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap"
+        rel="stylesheet">
+
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <main class="resume-contents">
         <section class="left-section">
-            <section class="left-section-contents">
+            <div class="left-section-content">
                 <div class="profile">
                     <img class="profile-image" src="img/profile-image.jpg" alt="Profile Image">
                     <p class="name">André Caetano</p>
@@ -33,73 +43,87 @@
                             <p>Photoshop, Illustrator & Premiere</p>
                         </li>
                         <li>
-                            <p>Word & Excel</p>
-                        </li>
+                            <p>Word & Excel</p></li>
                     </ul>
                 </div>
-            </section>
+            </div>
         </section>
         <section class="right-section">
-            <div class="right-section-contets">
+            <div class="right-section-contents">
                 <section class="about gap">
                     <div class="right-title">Sobre Mim</div>
-                    <p class="about=me-contents">
+                    <p class="about-me-contents">
                         Olá Sou André Caetano, e sou um publicitário<br>
                         <br> Um pouco mais sobre o que faço
                         <br> Quais são as minhas competecias
                     </p>
                 </section>
+                <section class="experience gap">
+                    <div class="right-title">Experiencia</div>
+                    <div class="experience-contents">
+                        <div class="exp-left">
+                            <p class="exp-company-name">Empresa 01</p>
+                            <p class="exp-company-name">2021-Present</p>
+                        </div>
+                        <div class="exp=right">
+                            <p class="exp-position">publicitário</p>
+                            <p class="exp-desc">
+                                Descreva as princiáos atividades da empresa 01
+                            </p>
+                        </div>
+                        <div class="exp-left">
+                            <p class="exp-company-name">Empresa 02</p>
+                            <p class="exp-company-name">2017-2021</p>
+                        </div>
+                        <div class="exp=right">
+                            <p class="exp-position">publicitário</p>
+                            <p class="exp-desc">
+                                Descreva as princiáos atividades da empresa 02
+                            </p>
+                        </div>
+                    </div>
+                </section>
+                <section class="education gap">
+                    <div class="right-title">formação Academica</div>
+                    <div class="education-contents">
+                        <div class="education-left">
+                            <p class="education-school-name">Mackenzie</p>
+                            <p class="education-time-period">2015-2018</p>
+                        </div>
+                        <div class="education-right">
+                            <p class="education-subject">Publicidade e Propaganda</p>
+                            <p class="education-desc">
+                                Bacharelado
+                            </p>
+                        </div>
+                        <div class="education-left">
+                            <p class="education-school-name">CEFET</p>
+                            <p class="education-time-period">2009-2013</p>
+                        </div>
+                        <div class="education-right">
+                            <p class="education-subject">Técnico em Edificações</p>
+                            <p class="education-desc">
+                                Técnico
+                            </p>
+                        </div>
+                    </div>
+                </section>
+                <section class="awards gap">
+                    <div class="right-title">cursos</div>
+                    <div class="awards-contents">
+                        <div class="awards-left">
+                            <p class="awards-company-name">Univesidade Presbiteriana Mackenzie</p>
+                            <p class="awards-time-period">Janeiro de 2015</p>
+                        </div>
+                        <div class="awards-right">
+                            <p class="awards-name">Curso de Branding</p>
+                            <p class="awards-desc">
+                                Curso feito no Mackenzie no ano de 2015
+                            </p>
+                        </div>
+                    </div>
+                </section>
             </div>
-            <section class="experience gap">
-                <div class="right title">Experiencia</div>
-                <div class="experience-contents">
-                    <div class="exp-left">
-                        <p class="exp-company-name">Empresa 01</p>
-                        <p class="exp-company-name">2021-Present1</p>
-                    </div>
-                    <div class="exp=right">
-                        <p class="exp-position">publicitário</p>
-                        <p class="exp-desc">
-                            Descreva as princiáos atividades da empresa 01
-                        </p>
-                    </div>
-                    <div class="exp-left">
-                        <p class="exp-company-name">Empresa 02</p>
-                        <p class="exp-company-name">2017-2021</p>
-                    </div>
-                    <div class="exp=right">
-                        <p class="exp-position">publicitário</p>
-                        <p class="exp-desc">
-                            Descreva as princiáos atividades da empresa 02
-                        </p>
-                    </div>
-                </div>
-            </section>
-            <section class="education gap">
-                <div class="right-title">formação Academica</div>
-                <div class="education-contents">
-                    <div class="education-left">
-                        <p class="education-school-name">Mackenzie</p>
-                        <p class="education-time-period">2015-2018</p>
-                    </div>
-                    <div class="education-right">
-                        <p class="education-subject">Publicidade e Propaganda</p>
-                        <p class="education-desc">
-                            Bacharelado
-                        </p>
-                    </div>
-                    <div class="education-left">
-                        <p class="education-school-name">CEFET</p>
-                        <p class="education-time-period">2009-2013</p>
-                    </div>
-                    <div class="education-right">
-                        <p class="education-subject">Técnico em Edificações</p>
-                        <p class="education-desc">
-                            Técnico
-                        </p>
-                    </div>
-                </div>
-            </section>
         </section>
     </main>
 </body>
